test/libyul/yulSyntaxTests/invalid/verbatim_empty_string.yul
{
    verbatim_0i_0o(hex"")
}
// ====
// dialect: zvm
// ----
// TypeError 1844: (21-26): The "verbatim_*" builtins cannot be used with empty bytecode.
